--- a/Discuz/Discuz.WinPhone/packages.config
+++ b/Discuz/Discuz.WinPhone/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Caliburn.Micro.Core" version="3.0.0-beta1" targetFramework="wp80" />
+  <package id="Caliburn.Micro.Xamarin.Forms" version="3.0.0-beta1" targetFramework="wp80" />
   <package id="WPtoolkit" version="4.2013.08.16" targetFramework="wp80" />
   <package id="Xamarin.Forms" version="1.5.0.6447" targetFramework="wp80" />
 </packages>
