--- a/Discuz/Discuz/packages.config
+++ b/Discuz/Discuz/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AngleSharp" version="0.9.2" targetFramework="portable-net45+win+wp80+MonoAndroid10+xamarinios10+MonoTouch10" />
   <package id="Caliburn.Micro.Core" version="3.0.0-beta1" targetFramework="portable-net45+win+wp80+MonoAndroid10+xamarinios10+MonoTouch10" />
   <package id="Caliburn.Micro.Xamarin.Forms" version="3.0.0-beta1" targetFramework="portable-net45+win+wp80+MonoAndroid10+xamarinios10+MonoTouch10" />
   <package id="Xamarin.Forms" version="1.5.0.6447" targetFramework="portable-net45+win+wp80+MonoAndroid10+xamarinios10+MonoTouch10" />
