--- a/Discuz/Discuz.Droid/Discuz.Droid.csproj
+++ b/Discuz/Discuz.Droid/Discuz.Droid.csproj
@@ -115,6 +115,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Properties\AndroidManifest.xml" />
+    <AndroidResource Include="Resources\drawable\arrow_left.png" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Discuz\Discuz.csproj">
