--- a/Discuz.Api/Discuz.Api.csproj
+++ b/Discuz.Api/Discuz.Api.csproj
@@ -44,12 +44,16 @@
     <Compile Include="Attributes\EnumParam.cs" />
     <Compile Include="Attributes\ParamAttribute.cs" />
     <Compile Include="Attributes\SpecifyNameValueAttribute.cs" />
+    <Compile Include="Converters\BoolConverter.cs" />
+    <Compile Include="Entities\Attachement.cs" />
     <Compile Include="Entities\Forum.cs" />
     <Compile Include="Entities\ForumCatalog.cs" />
+    <Compile Include="Entities\ThreadPost.cs" />
     <Compile Include="Entities\ThreadSummary.cs" />
     <Compile Include="MethodBase.cs" />
     <Compile Include="Methods\ForumDisplay.cs" />
     <Compile Include="Methods\ForumIndex.cs" />
+    <Compile Include="Methods\ViewThread.cs" />
     <Compile Include="ParamHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StringHelper.cs" />
