--- a/Discuz/Discuz/packages.config
+++ b/Discuz/Discuz/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="Caliburn.Micro.Core" version="3.0.0-beta1" targetFramework="portable-net45+win+wp80+MonoAndroid10+xamarinios10+MonoTouch10" />
   <package id="Caliburn.Micro.Xamarin.Forms" version="3.0.0-beta1" targetFramework="portable-net45+win+wp80+MonoAndroid10+xamarinios10+MonoTouch10" />
+  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="portable-net45+win+wpa81+wp80+MonoAndroid10+xamarinios10+MonoTouch10" />
   <package id="Xamarin.Forms" version="1.5.0.6447" targetFramework="portable-net45+win+wp80+MonoAndroid10+xamarinios10+MonoTouch10" />
 </packages>
