--- a/Discuz/Discuz.Droid/Properties/AndroidManifest.xml
+++ b/Discuz/Discuz.Droid/Properties/AndroidManifest.xml
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:installLocation="auto" package="Blueidea.Blueidea">
 	<uses-sdk android:minSdkVersion="15" />
-	<application></application>
+	<application android:label="经典论坛"></application>
+	<uses-permission android:name="android.permission.VIBRATE" />
 </manifest>
