--- a/Discuz/Discuz.Droid/packages.config
+++ b/Discuz/Discuz.Droid/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AndHUD" version="1.2.0" targetFramework="MonoAndroid51" />
   <package id="Caliburn.Micro.Core" version="3.0.0-beta1" targetFramework="MonoAndroid42" />
   <package id="Caliburn.Micro.Xamarin.Forms" version="3.0.0-beta1" targetFramework="MonoAndroid42" />
   <package id="Xamarin.Android.Support.v4" version="23.0.1.0-rc2" targetFramework="MonoAndroid42" />
