--- a/Discuz/Discuz.WinPhone/Discuz.WinPhone.csproj
+++ b/Discuz/Discuz.WinPhone/Discuz.WinPhone.csproj
@@ -111,6 +111,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>AppResources.resx</DependentUpon>
     </Compile>
+    <Compile Include="Services\Hud.cs" />
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
@@ -132,8 +133,10 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="arrow_left.png" />
+    <Content Include="bottom.png" />
     <Content Include="favorite.png" />
     <Content Include="README_FIRST.txt" />
+    <Content Include="refresh.png" />
     <Content Include="SplashScreenImage.jpg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -161,6 +164,7 @@
     <Content Include="Toolkit.Content\ApplicationBar.Check.png" />
     <Content Include="Toolkit.Content\ApplicationBar.Delete.png" />
     <Content Include="Toolkit.Content\ApplicationBar.Select.png" />
+    <Content Include="top.png" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resources\AppResources.resx">
