--- a/Discuz/Discuz.Droid/Discuz.Droid.csproj
+++ b/Discuz/Discuz.Droid/Discuz.Droid.csproj
@@ -118,6 +118,7 @@
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\Hud.cs" />
+    <Content Include="Theme 生成器.txt" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
@@ -137,6 +138,93 @@
     <AndroidResource Include="Resources\drawable\favorite.png" />
     <AndroidResource Include="Resources\drawable\refresh.png" />
     <AndroidResource Include="Resources\drawable\top.png" />
+    <AndroidResource Include="Resources\drawable\bottom.png" />
+    <AndroidResource Include="Resources\Values\Styles.xml" />
+    <AndroidResource Include="Resources\drawable\ab_background_textured_mytheme.xml" />
+    <AndroidResource Include="Resources\drawable\btn_cab_done_mytheme.xml" />
+    <AndroidResource Include="Resources\drawable\progress_horizontal_mytheme.xml" />
+    <AndroidResource Include="Resources\drawable\selectable_background_mytheme.xml" />
+    <AndroidResource Include="Resources\drawable\spinner_background_ab_mytheme.xml" />
+    <AndroidResource Include="Resources\drawable\tab_indicator_ab_mytheme.xml" />
+    <AndroidResource Include="Resources\drawable-hdpi\ab_bottom_solid_mytheme.9.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\ab_solid_mytheme.9.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\ab_stacked_solid_mytheme.9.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\ab_texture_tile_mytheme.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\ab_transparent_mytheme.9.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\btn_cab_done_default_mytheme.9.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\btn_cab_done_focused_mytheme.9.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\btn_cab_done_pressed_mytheme.9.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\cab_background_bottom_mytheme.9.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\cab_background_top_mytheme.9.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\list_focused_mytheme.9.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\list_pressed_mytheme.9.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\menu_dropdown_panel_mytheme.9.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\progress_bg_mytheme.9.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\progress_primary_mytheme.9.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\progress_secondary_mytheme.9.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\spinner_ab_default_mytheme.9.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\spinner_ab_disabled_mytheme.9.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\spinner_ab_focused_mytheme.9.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\spinner_ab_pressed_mytheme.9.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\tab_selected_focused_mytheme.9.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\tab_selected_mytheme.9.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\tab_selected_pressed_mytheme.9.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\tab_unselected_focused_mytheme.9.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\tab_unselected_mytheme.9.png" />
+    <AndroidResource Include="Resources\drawable-hdpi\tab_unselected_pressed_mytheme.9.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\ab_bottom_solid_mytheme.9.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\ab_solid_mytheme.9.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\ab_stacked_solid_mytheme.9.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\ab_texture_tile_mytheme.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\ab_transparent_mytheme.9.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\btn_cab_done_default_mytheme.9.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\btn_cab_done_focused_mytheme.9.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\btn_cab_done_pressed_mytheme.9.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\cab_background_bottom_mytheme.9.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\cab_background_top_mytheme.9.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\list_focused_mytheme.9.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\list_pressed_mytheme.9.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\menu_dropdown_panel_mytheme.9.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\progress_bg_mytheme.9.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\progress_primary_mytheme.9.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\progress_secondary_mytheme.9.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\spinner_ab_default_mytheme.9.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\spinner_ab_disabled_mytheme.9.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\spinner_ab_focused_mytheme.9.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\spinner_ab_pressed_mytheme.9.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\tab_selected_focused_mytheme.9.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\tab_selected_mytheme.9.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\tab_selected_pressed_mytheme.9.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\tab_unselected_focused_mytheme.9.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\tab_unselected_mytheme.9.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\tab_unselected_pressed_mytheme.9.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\ab_bottom_solid_mytheme.9.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\ab_solid_mytheme.9.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\ab_stacked_solid_mytheme.9.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\ab_texture_tile_mytheme.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\ab_transparent_mytheme.9.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\btn_cab_done_default_mytheme.9.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\btn_cab_done_focused_mytheme.9.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\btn_cab_done_pressed_mytheme.9.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\cab_background_bottom_mytheme.9.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\cab_background_top_mytheme.9.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\list_focused_mytheme.9.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\list_pressed_mytheme.9.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\menu_dropdown_panel_mytheme.9.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\progress_bg_mytheme.9.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\progress_primary_mytheme.9.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\progress_secondary_mytheme.9.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\spinner_ab_default_mytheme.9.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\spinner_ab_disabled_mytheme.9.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\spinner_ab_focused_mytheme.9.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\spinner_ab_pressed_mytheme.9.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\tab_selected_focused_mytheme.9.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\tab_selected_mytheme.9.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\tab_selected_pressed_mytheme.9.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\tab_unselected_focused_mytheme.9.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\tab_unselected_mytheme.9.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\tab_unselected_pressed_mytheme.9.png" />
+    <AndroidResource Include="Resources\Values\styles_mytheme.xml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Discuz\Discuz.csproj">
