Catch Android TaskCanceledException

--- a/Discuz/Discuz.Droid/Discuz.Droid.csproj
+++ b/Discuz/Discuz.Droid/Discuz.Droid.csproj
@@ -128,6 +128,7 @@
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\Hud.cs" />
+    <Compile Include="MyUncaughtExceptionHandler.cs" />
     <Content Include="Theme 生成器.txt" />
   </ItemGroup>
   <ItemGroup>
