--- a/Discuz/Discuz.Droid/Discuz.Droid.csproj
+++ b/Discuz/Discuz.Droid/Discuz.Droid.csproj
@@ -125,6 +125,7 @@
     <Compile Include="Application.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="Renders\BorderRender.cs" />
+    <Compile Include="Renders\CycleBoxRender.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\Hud.cs" />
