--- a/Discuz/Discuz.Droid/Discuz.Droid.csproj
+++ b/Discuz/Discuz.Droid/Discuz.Droid.csproj
@@ -126,6 +126,7 @@
     <Compile Include="MainActivity.cs" />
     <Compile Include="Renders\BorderRender.cs" />
     <Compile Include="Renders\CycleBoxRender.cs" />
+    <Compile Include="Renders\TabbedRender.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\Hud.cs" />
@@ -151,7 +152,9 @@
     <AndroidResource Include="Resources\drawable\refresh.png" />
     <AndroidResource Include="Resources\drawable\top.png" />
     <AndroidResource Include="Resources\drawable\bottom.png" />
-    <AndroidResource Include="Resources\Values\Styles.xml" />
+    <AndroidResource Include="Resources\Values\Styles.xml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
     <AndroidResource Include="Resources\drawable\ab_background_textured_mytheme.xml" />
     <AndroidResource Include="Resources\drawable\btn_cab_done_mytheme.xml" />
     <AndroidResource Include="Resources\drawable\progress_horizontal_mytheme.xml" />
@@ -236,7 +239,9 @@
     <AndroidResource Include="Resources\drawable-xxhdpi\tab_unselected_focused_mytheme.9.png" />
     <AndroidResource Include="Resources\drawable-xxhdpi\tab_unselected_mytheme.9.png" />
     <AndroidResource Include="Resources\drawable-xxhdpi\tab_unselected_pressed_mytheme.9.png" />
-    <AndroidResource Include="Resources\Values\styles_mytheme.xml" />
+    <AndroidResource Include="Resources\Values\styles_mytheme.xml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Discuz\Discuz.csproj">
