--- a/Discuz/Discuz/Discuz.csproj
+++ b/Discuz/Discuz/Discuz.csproj
@@ -45,6 +45,7 @@
     <Compile Include="ListViewGroup.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PropertyHelper.cs" />
+    <Compile Include="Services\IStorage.cs" />
     <Compile Include="Services\IToast.cs" />
     <Compile Include="UniPadding.cs" />
     <Compile Include="ViewLocatorPage.cs" />
