style for android

--- a/Discuz/Discuz/Discuz.csproj
+++ b/Discuz/Discuz/Discuz.csproj
@@ -39,6 +39,7 @@
     <Compile Include="App.cs" />
     <Compile Include="Behaviors\DragableBehaviors.cs" />
     <Compile Include="Controls\Border.cs" />
+    <Compile Include="Controls\Card.cs" />
     <Compile Include="Controls\CycleBox.cs" />
     <Compile Include="Converters\HtmlClearConverter.cs" />
     <Compile Include="HtmlClear.cs" />
