--- a/Discuz/Discuz.Droid/Discuz.Droid.csproj
+++ b/Discuz/Discuz.Droid/Discuz.Droid.csproj
@@ -141,6 +141,7 @@
     <Compile Include="Application.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="Renders\BorderRender.cs" />
+    <Compile Include="Renders\CardRender.cs" />
     <Compile Include="Renders\CycleBoxRender.cs" />
     <Compile Include="Renders\TabbedRender.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
