--- a/Discuz/Discuz.WinPhone/packages.config
+++ b/Discuz/Discuz.WinPhone/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Caliburn.Micro.Core" version="3.0.0-beta1" targetFramework="wp80" />
   <package id="Caliburn.Micro.Xamarin.Forms" version="3.0.0-beta1" targetFramework="wp80" />
+  <package id="PhoneThemeManager" version="2.1.2" targetFramework="wp81" />
   <package id="WPtoolkit" version="4.2013.08.16" targetFramework="wp80" />
   <package id="Xamarin.Forms" version="1.5.1.6471" targetFramework="wp81" />
 </packages>
